# Agent_Smith_PublicVersion

./: .env.example  .flake8  .gitignore  BENCHMARK_REPORT.md  Makefile  README.md  agent_mbpp.py  agent_swebench.py  conftest.py  mcp_tools_mbpp.py  mcp_tools_swebench.py  pyproject.toml  vercel.json
agent/cli/: agent_mbpp.py  agent_swebench.py
agent/core/: agent_loop.py
agent/llm/: manager.py  providers.py
agent/parsing/: code_extractor.py
agent/prompts/: mbpp_prompt.txt  swebench_prompt.txt
config/: sandbox_template.json  sandbox_template_swebench.json
demo/: index.html  package-lock.json  package.json  tailwind.config.js
demo/src/: App.tsx  index.css
demo/src/components/: AgentTrace.tsx  BenchmarkSection.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  Navbar.tsx
demo/src/data/: benchmarkData.ts
mcp_servers/: mcp_client.py  mcp_server.py
mcp_servers/shared_tools/: _docker.py  _testbed.py
mcp_servers/shared_tools/execution/: get_patch.py  run_command.py  run_tests.py
mcp_servers/shared_tools/filesystem/: edit_file.py  list_files.py  read_file.py  write_file.py
mcp_servers/shared_tools/search/: find_definition.py  find_references.py  grep_context.py  search_code.py
models/: agent_state.py  llm.py  sandbox.py  solution.py  task.py
mydocker/: manager.py
sandbox/: cli.py
sandbox/core/: sandbox.py
sandbox/manual/: generator.py
scripts/: bench_all.sh  bench_extra_swe.sh  bench_mbpp.sh  bench_swebench.sh
tests/: conftest.py  test_agent.py  test_sandbox.py  test_sandbox_scripts.py  test_tools.py
utils/: logger.py
