[project]
name = "agent-smith"
version = "1.0.0"
description = "Autonomous coding agent for MBPP and SWE-bench"
requires-python = ">=3.10"

dependencies = [
    "pydantic>=2.0",
    "mcp>=1.0",
    "anthropic>=0.34",
    "httpx>=0.27",
    "anyio>=4.0",
    "requests>=2.31",
    "python-dotenv>=1.0",
    "docker>=7.0",
    "PyYAML>=6.0",
]

[project.scripts]
sandbox        = "sandbox.cli:main"
agent-mbpp     = "agent.cli.agent_mbpp:main"
agent-swebench = "agent.cli.agent_swebench:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "agent", "sandbox", "models", "mydocker",
    "utils", "tools", "mcp_servers"
]

[dependency-groups]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "flake8", "mypy>=1.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "--import-mode=importlib"
filterwarnings = [
    # httpx leaves an unclosed aiter_raw coroutine on MCP HTTP transport teardown.
    # This is an httpx internals issue, not our code.
    "ignore::pytest.PytestUnraisableExceptionWarning",
]
